# MyChat

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  callwindow.cpp  callwindow.h  callwindow.ui  chatwindow.cpp  chatwindow.h  chatwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  style.qss
server/: CMakeLists.txt  chatserver.cpp  chatserver.h  main.cpp
